# legrad_metal

./: .gitmodules  CMakeLists.txt  main.cpp
legrad_metal/: CMakeLists.txt  metal_mgr.cpp  metal_mgr.h
legrad_metal/backend/: metal_dispatcher.cpp  metal_dispatcher.h  metal_function.cpp  metal_function.h
legrad_metal/backend/kernels/: main.metal
legrad_metal/backend/metal/: CMakeLists.txt
legrad_metal/core/: allocator.cpp  allocator.h  buffer.h  dtype.cpp  dtype.h
legrad_metal/internal/: array_view.h  enum_impl.h  pattern.h  view_pack.cpp  view_pack.h
legrad_metal/kernels/: main.metal
legrad_metal/macros/: expr.h  log.h
legrad_metal/tests/: CMakeLists.txt
legrad_metal/tests/internal/: array_view.cpp  view_pack.cpp
legrad_metal/utils/: funcs.h
